.deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: ever-works
    labels:
        app.kubernetes.io/managed-by: kubectl
